Atualização do portfólio: Porfavor Melhore

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               ><i class="fa-brands fa-instagram"></i
             ></a>
             <a href="https://discord.com/channels/@b1el0403" target="_blank"
-              ><i class="fa-brands fa-discord fa-spin"></i
+              ><i class="fa-brands fa-discord"></i
             ></a>
             <a
               href="https://open.spotify.com/user/2nmcobent07h0elcz6x8rl3l4?si=ff7051c6e1c844e7"
